(fix) webpage crop on mobile.

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -11,8 +11,9 @@ $colorHard: #fff;
 body {
   background: border-box $bkgColor2;
   background-repeat: no-repeat;
-  background-size: 100vw 100vh;
+  background-size: auto auto;
   user-select: none;
+  align-items: flex-start;
 }
 
 textarea {
